--- a/package.json
+++ b/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "task_master",
+  "name": "task-master",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "app.js",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "connect-mongo": "^5.1.0",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.21.1",
-    "express-session": "^1.18.1",
-    "express-validator": "^7.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.8.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.10",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.6"
   },
-  "devDependencies": {
-    "chai": "^5.1.2",
-    "mocha": "^10.8.2",
-    "supertest": "^7.0.0"
+  "scripts": {
+    "start": "node app.js"
   }
 }
